print content of ctx archive

--- a/installerspec.yaml
+++ b/installerspec.yaml
@@ -1,6 +1,7 @@
 executors:
-  - imageResource:
-      name: installerimage
+  - imageResourceRef:
+      resource:
+        name: installerimage
     config:
       level: info
     outputs:
